--- a/view/form.html
+++ b/view/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Register the user</title>
@@ -7,6 +7,9 @@
 <body>
   <h2>Register the user</h2>
   <form id="userForm">
+    <label for="id">ID (for update only):</label><br/>
+    <input type="number" id="id"/><br /><br />
+
     <label for="name">Name:</label><br>
     <input type="text" id="name" required><br><br>
 
@@ -22,21 +25,27 @@
     document.getElementById('userForm').addEventListener('submit', async function(e) {
       e.preventDefault();
 
+      const id = document.getElementById('id').value;
       const name = document.getElementById('name').value;
       const email = document.getElementById('email').value;
 
+      const method = id ? "PUT" : "POST";
+      const body = id ? { id: Number(id), name, email } : { name, email };
+
       const res = await fetch('http://localhost:8080/users', {
-        method: 'POST',
+        method,
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ name, email })
+        body: JSON.stringify(body),
       });
 
-      const resultDiv = document.getElementById('result');
-      if (res.status === 201) {
-        resultDiv.innerText = 'User registered successfully!';
+      const resultDiv = document.getElementById("result");
+      if (res.ok) {
+        resultDiv.innerText = id
+          ? 'User updated successfully!'
+          : 'User created successfully!';
       } else {
         const errorText = await res.text();
-        resultDiv.innerText = 'Erro: ' + errorText;
+        resultDiv.innerText = 'Error: ' + errorText;
       }
     });
   </script>
